# MedicalViewer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: CMakeLists.txt  ImageViewWidget.cpp  ImageViewWidget.h  MainWindow.cpp  MainWindow.h  imageToolWidget.cpp  imageToolWidget.h
